[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "netket_fidelity"
description="Infidelity operator for NetKet."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "netket~=3.9",
]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "ruff==0.0.282",
]

[tool.hatch.build]
include = ["netket_fidelity*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "netket_fidelity/_version.py"

# Development tools

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
command_line = "-m pytest --verbose test"
source = ["netket_fidelity"]

[tool.pytest.ini_options]
addopts = "--color=yes --verbose --durations=100 -n auto --tb=short"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
filterwarnings = [
    "ignore::UserWarning",
    "ignore:No GPU/TPU found, falling back to CPU.:UserWarning",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:`np.long`",
    "ignore:`np.int` is a deprecated alias for the builtin `int`",
    "ignore::DeprecationWarning:tensorboardX",
]
testpaths = [
    "test",
]


[tool.ruff]
target-version = "py38"
select = ["E", "F", "W"]
fixable = ["E", "F", "W"]
ignore = ["E501", "E731", "E741"]
#ignore = ["E266"]
line-length = 88
exclude = ["Examples/Legacy"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402","F401"]
"netket/nn/activation.py" = ["F401"]
"Examples/" = ["F401"]

